tests/macros/editor/plugin.rs
fn main() {
    let q = inquisition::questions![editor { plugin: todo!() }];
}
